@@ -1,5 +1,11 @@
 2003-11-19  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/makeinfo.c (cm_value): do not issue bogus warnings about
+	undefined values when @value is used inside a @menu environment, and
+	the output format is Docbook.
+
+2003-11-19  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/sectioning.c (sectioning_underscore): use @settitle value
 	if @top parameter is empty.
 
